.salus/development/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: salus-2e65d758-96d8-458c-891f-adcc9e026589-ingress-two
  namespace: testenterprisespace--production-333062706
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt-nginx
    kubernetes.io/ingress.allow-http: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/rewrite-target: /swagger$2
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
    #nginx.ingress.kubernetes.io/use-regex: "true"
    #nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    #nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sweet-jang-2e65d758.salus.dev
      secretName: sweet-jang-2e65d758-d-salus-d-dev-key
    - hosts:
        - pathbasedroute.salus.dev
      secretName: pathbasedroute-d-salus-d-dev-key
  rules:
    - host: sweet-jang-2e65d758.salus.dev
      http:
        paths:
          - path: /swagger(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: salus-app-service-2e65d758
                port:
                  name: http
    - host: pathbasedroute.salus.dev
      http:
        paths:
          - path: /organization/swagger(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: salus-app-service-2e65d758
                port:
                  name: http

          - path: /organization/swagger/(.+\.(js|css|png|jpg|jpeg|gif|ico))
            pathType: Prefix
            backend:
              service:
                name: salus-app-service-2e65d758
                port:
                  name: http
